<resources>


    <string name="app_name">BalelecBud</string>
    <string name="title_activity_authentication">Sign in</string>


    <string name="cache_info_start">Last refreshed\u0020</string>
    <string name="cache_info_end">\u0020minutes ago</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoia2FyaW1hc3NpIiwiYSI6ImNrOTEzd2FqMzA3Z3EzbmxoYWdvb3Z4ZWIifQ.0S1QH5SG3ZXXC1ofSSbadQ</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="map_view">Map View</string>
    <string name="was_here">was here at\u0020</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_repeat_password">Repeat Password</string>

    <string name="action_sign_in">Sign in!</string>
    <string name="action_no_account">No account? Register!</string>
    <string name="action_register">Register!</string>
    <string name="action_existing_account">Already have an account? Sign in!</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>

    <string name="require_email">Email required!</string>
    <string name="invalid_email">Enter a valid email!</string>
    <string name="require_password">Password required!</string>
    <string name="invalid_password">Password should be at least 6 characters long.</string>
    <string name="mismatch_password">Passwords do not match!</string>
    <string name="require_password_repeated">Repeat password!</string>
    <string name="location">Location</string>
    <string name="festival_information">Festival Information</string>

    <string name="emergency_tile">Case: </string>
    <string name="emergency_solution">What to do: </string>
    <string name="social_view">Social</string>
    <string name="festival_info_view">Information</string>

    <string name="subscribe_explanation_text">Subscribe to upcoming concerts to be sure not to miss it!</string>

    <string name="transport_view">Transport</string>
    <string name="toggle_location_view">Toggle Location</string>
    <string name="schedule_view">Schedule</string>
    <string name="point_of_interest">Points of interest</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>

    <string name="concert_soon_channel_name">Concert Soon Channel</string>
    <string name="concert_soon_notification_title">A concert is starting soon</string>
    <string name="concert_soon_channel_description">A channel to convey information about concerts starting soon</string>

    <string name="pic_uploaded_message">Your picture was uploaded to the photos wall!</string>

    <!--  APP DRAWER  -->

    <string name="drawer_home">Home</string>
    <string name="drawer_social">Social</string>
    <string name="drawer_festival_information">Information</string>
    <string name="drawer_schedule">Line Up</string>
    <string name="drawer_poi">Points of Interest</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_transport">Transport</string>
    <string name="drawer_emergency">Emergency</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_pictures">Pictures</string>

    <!--  SCHEDULE  -->

    <string name="schedule_image_description">Image for a concert</string>

    <!--  SOCIAL FEATURES  -->

        <!--   TAB NAMES -->
        <string name="tab_friends">Friends</string>
        <string name="tab_received_requests">Received requests</string>
        <string name="tab_sent_requests">Sent requests</string>

        <!-- DIALOG   -->
        <string name="add_friend_title">Add a friend</string>
        <string name="add_friend_request">Request</string>
        <string name="cancel">Cancel</string>
        <string name="add_friend_email_hint">Enter your friend\'s email</string>
        <string name="add_own_as_friend">You can\'t add yourself as a friend :-)</string>
        <string name="add_friend_request_sent">Friend request sent to \</string>

        <!--  FRIEND ITEM  -->
        <string name="remove_friend">Unfriend</string>

        <!--  FRIEND REQUEST ITEM  -->
        <string name="accept_request">Accept</string>
        <string name="reject_request">Delete</string>

        <string name="require_name">Name required!</string>

        <string name="require_sign_in">You need to be signed in to use this feature</string>

        <!--  RECEIVED REQUEST ITEM  -->
        <string name="cancel_request">Cancel</string>

    <!-- POI -->
    <string name="go_to_map">Go to map</string>

    <!-- SETTINGS -->
    <string name="location_enable_key">LOCATION_ENABLE_KEY"</string>
    <string name="location_enable_title">Enable location usage</string>

    <string name="location_info_key">LOCATION_INFO_KEY"</string>
    <string name="location_info_title">Location usage is not allowed</string>
    <string name="location_info_summary">Click here to allow it</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_in_key">LOGIN_INFO_KEY</string>
    <string name="not_sign_in">You are not signed in</string>
    <string name="click_to_sign_in">Click here to sign in</string>
    <string name="sign_out_key">SIGN_OUT</string>
    <string name="sign_out_text">Sign out</string>
    <string name="register">Register</string>
    <string name="connection_key">CONNECTING</string>
    <string name="connecting">Connecting …</string>
    <string name="sign_in_failed">Sign in failed ! Check your email and password</string>
    <string name="register_failed">Register failed ! This email is already used</string>

    <string name="delete_account">Delete account</string>
    <string name="delete_user_key">DELETE_USER_KEY</string>
    <string name="delete_account_text">Are you sure you want to delete your account ? This action is irreversible</string>
    <string name="delete_account_yes">Yes</string>


    <!--  EMERGENCIES  -->

    <string name="emergency_ask_for_help">Ask for help</string>
    <string name="you_can_report_an_emergency_here">You can report an emergency here :</string>
    <string name="declare_an_emergency">Declare an emergency</string>
    <string name="describe_emergency">Describe your emergency</string>
    <string name="submit_emergency">Submit</string>
    <string name="emergency_sent_message">Emergency message sent, please wait in case you requested assistance</string>
    <string name="emergency_fill_message">Please give us more information</string>
    <string name="emergency_numbers_title">Emergency numbers (click to call)</string>
    <string name="emergency_information_title">Emergency instructions</string>


    <!--  CLOUD MESSAGING  -->
    <string name="message_channel_name">Notification Message Channel</string>
    <string name="fcm_key">key=AAAAIEByxFA:APA91bHhnxIzhsfli52m8kq9uP9VWvIB972DTJYz85_ndFCzeDEzEDdgiYVjrVo8yM9npWNH5VchrfNqWw--1-SXB35YS7HIX04_-_9FmiUdJAlYzrRnN2B9q__7t9hXWsIC_rkzgRiv</string>
    <string name="fcm_base_url">https://fcm.googleapis.com/fcm/send</string>
    <string name="message_type_general">MESSAGE TYPE GENERAL</string>
    <string name="message_type_social">MESSAGE TYPE SOCIAL</string>
    <string name="data_key_title">title</string>
    <string name="data_key_body">body</string>
    <string name="data_key_type">type</string>

    <!--  FRIENDSHIP NOTIFICATIONS  -->
    <string name="type_friend_request">TYPE FRIEND REQUEST</string>
    <string name="type_accept_request">TYPE ACCEPT REQUEST</string>
    <string name="friend_request_title">You received a friend request!</string>
    <string name="friend_request_body">\ sent you a friend request</string>
    <string name="accept_request_title">You have a new friend!</string>
    <string name="accept_request_body">\ accepted your friend request</string>

    <!--  SPOTIFY PLAYLIST -->
    <string name="spotify_client_id">7a2fb16c68b44c5b9fc7397f6d25f714</string>
    <string name="spotify_redirect_uri">ch.epfl.balelecbud://callback</string>
    <string name="download_spotify_message">Download Spotify free and log-in to listen to the Balelec playlist</string>
    <string name="login_spotify_message">Go to Spotify and log-in to listen to the Balelec playlist</string>
    <string name="spotify_message">Listen to the Balelec Playlist on Spotify</string>
    <string name="playlist_navigation_title">Playlist</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt" />
    <string name="camera_permission_refused_msg">The app needs camera permission to take a picture</string>
    <string name="take_a_pic">Take a pic</string>
    <string name="drawer_photo_gallery">Photo Gallery</string>
    <string name="sign_out_summary">Currently logged in as\u0020</string>

</resources>
